--- a/templates/security/auth/signup.html
+++ b/templates/security/auth/signup.html
@@ -141,7 +141,7 @@
                     <div class="rounded-lg lg:w-96 w-auto h-auto bg-white shadow-xl lg:p-6 p-4 backdrop-filter backdrop-blur-md bg-opacity-70">
                         <div class="space-y-4">
                             <p class="dark:text-gray-400 text-center mt-6 text-lg font-light">
-                                {% trans 'Bienvenidos a la sección de registro para nuevos usuarios, porfavor rrellena los campos a continuación para poder crear su cuenta e iniciar sesión en nuestro sistema.' %}
+                                {% trans 'Bienvenidos a la sección de registro para nuevos usuarios. Por favor, rellena los campos a continuación para poder crear su cuenta e iniciar sesión en nuestro sistema.' %}
                             </p>
                         </div>
                     </div>
