--- a/templates/security/modules/form.html
+++ b/templates/security/modules/form.html
@@ -6,7 +6,7 @@
     <div class="text-center" data-aos="fade" data-aos-delay="200">
         <div class="sm:pt-28 lg:pt-4">
             <h1 class="dark:text-white text-4xl  text-center mt-6 font-Pacifico">
-                {{ title }}
+                {{ title2 }}
             </h1>
         </div>
         <div class="flex flex-wrap items-center justify-center my-6 x-4">
