--- a/templates/security/modules/form.html
+++ b/templates/security/modules/form.html
@@ -49,42 +49,48 @@
             </a>
         </div>
         <form method="post" enctype="multipart/form-data" class="space-y-6 py-4">
-            <div class="grid grid-cols-1 gap-8 sm:mx-4 lg:mx-20" data-aos="fade">
-                <div class="p-4 rounded-3xl dark:bg-secundario bg-gray-50 grid grid-cols-1 lg:grid-cols-2 gap-6" data-aos="fade-right" data-aos-delay="200">
-                    {% csrf_token %}
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div class="">
-                            <div class="lg:mt-10 mb-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 sm:mx-4 lg:mx-20" data-aos="fade">
+                <div class="grid space-y-2">
+                    <div class="p-4 rounded-3xl dark:bg-secundario bg-gray-50 grid grid-cols-1 lg:grid-cols-2 gap-6" data-aos="fade-right" data-aos-delay="200">
+                        {% csrf_token %}
+                        <div class="grid gap-6">
+                            <div class="">
                                 <label for="{{ form.name.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.name.label }}</label>
                                 {{ form.name }}
                             </div>
-                            <div class="lg:mt-20 mb-8">
+                            <div class="">
                                 <label for="{{ form.url.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.url.label }}</label>
                                 {{ form.url }}
                             </div>
                         </div>
-                        <div>
-                            <div class="lg:mt-10 mb-8">
+                        <div class="grid gap-6">
+                            <div class="">
                                 <label for="{{ form.menu.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.menu.label }}</label>
                                 {{ form.menu }}
                             </div>
-                            <div class="lg:mt-20 mb-8">
+                            <div class="">
                                 <label for="{{ form.icon.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.icon.label }}</label>
                                 {{ form.icon }}
                             </div>
                         </div>
                     </div>
-                    <div class="mb-8">
-                        <label for="{{ form.description.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.description.label }}</label>
-                        {{ form.description }}
+                    <div class="space-y-2 rounded-3xl dark:bg-secundario bg-gray-50 p-4" data-aos="fade-right" data-aos-delay="200">
+                        <div>
+                            <label for="{{ form.description.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.description.label }}</label>
+                            {{ form.description }}
+                        </div>
+                        <div class="flex flex-wrap space-x-2">
+                            <label for="{{ form.is_active.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.is_active.label }}</label>
+                            {{ form.is_active }}
+                        </div>
                     </div>
                 </div>
                 <!-- <p for="permission-search" class="dark:text-blue-300 font-black uppercase text-lg">Buscar Permisos</p> -->
-                <div class="p-4 rounded-3xl dark:bg-secundario bg-gray-50 ">
-                    <div class="mb-8">
-                        <label for="{{ form.permissions.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.permissions.label }}</label>
+                <div class="p-4 rounded-3xl dark:bg-secundario bg-gray-50 flex flex-col">
+                    <div class="flex flex-wrap space-x-4 justify-center items-center">
+                        <label for="{{ form.permissions.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg items-center">{{ form.permissions.label }}</label>
                         <!-- Barra de búsqueda -->
-                        <div class="p-4 flex justify-center">
+                        <div class="flex justify-center">
                             <div class="relative mt-1">
                                 <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
                                     <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
@@ -95,16 +101,22 @@
                                 placeholder="Búscar permisos">
                             </div>
                         </div>
-                        <div id="permissions-list" class="checkbox-container shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                    </div>
+                    <div id="permissions-list-container" class="flex-grow overflow-y-auto mt-4" style="min-height: 300px; max-height: 400px;">
+                        <div id="permissions-list" class="checkbox-container shadow-sm text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                             <!-- Aquí se cargarán los permisos -->
                         </div>
                     </div>
-                    <div class="mb-8 flex flex-col justify-center items-center">
-                        <label for="{{ form.is_active.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.is_active.label }}</label>
-                        {{ form.is_active }}
-                    </div>
                 </div>
             </div>
+            {% if not form.instance.pk %}
+            <div class="flex justify-center items">
+                <button type="button" id="addMenuBtn"
+                    class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-4 md:mr-2 mb-2 md:mb-0 flex items-center">
+                    Más Menús <i class="ri-add-circle-fill px-2"></i>
+                </button>
+            </div>
+            {% endif %}
             <div class="flex flex-col md:flex-row justify-center">
                 <button type="submit" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 md:mr-2 mb-2 md:mb-0 flex items-center">
                     <i class="fa-solid fa-save mr-2"></i>Guardar
@@ -132,51 +144,61 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function () {
-                            const permissions = {{ permissions_json|safe }};
-                            const selectedPermissions = {{ selected_permissions_json|safe }};
-                            const searchInput = document.getElementById('permission-search');
-                            const permissionsList = document.getElementById('permissions-list');
-                    
-                            function renderPermissions(permissions) {
-                                permissionsList.innerHTML = '';
-                                if (permissions.length === 0) {
-                                    const noResultsItem = document.createElement('div');
-                                    noResultsItem.classList.add('py-1', 'text-gray-500', 'dark:text-gray-400');
-                                    noResultsItem.textContent = 'Sin resultados de búsqueda...';
-                                    permissionsList.appendChild(noResultsItem);
-                                } else {
-                                    permissions.forEach(permission => {
-                                        const permissionItem = document.createElement('div');
-                                        permissionItem.classList.add('py-1');
-                                        const isChecked = selectedPermissions.includes(permission.id);
-                                        permissionItem.innerHTML = `
-                                            <label class="block">
-                                                <input type="checkbox" name="permissions" value="${permission.id}" ${isChecked ? 'checked' : ''}
-                                                    class="checkbox-container shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
-                                                ${permission.content_type__app_label} | ${permission.codename} - ${permission.name}
-                                            </label>
-                                        `;
-                                        permissionsList.appendChild(permissionItem);
-                                    });
-                                }
-                            }
-                    
-                            function filterPermissions(query) {
-                                const filteredPermissions = permissions.filter(permission => {
-                                    return permission.name.toLowerCase().includes(query.toLowerCase()) ||
-                                           permission.codename.toLowerCase().includes(query.toLowerCase()) ||
-                                           permission.content_type__app_label.toLowerCase().includes(query.toLowerCase());
-                                });
-                                renderPermissions(filteredPermissions);
-                            }
-                    
-                            searchInput.addEventListener('input', function () {
-                                filterPermissions(searchInput.value);
-                            });
-                    
-                            // Render all permissions on initial load
-                            renderPermissions(permissions);
-                        });
+        const permissions = {{ permissions_json|safe }};
+        const selectedPermissions = {{ selected_permissions_json|safe }};
+        const searchInput = document.getElementById('permission-search');
+        const permissionsList = document.getElementById('permissions-list');
+
+        function renderPermissions(permissions, query = '') {
+            permissionsList.innerHTML = '';
+            if (query === '') {
+                const initialMessage = document.createElement('div');
+                initialMessage.classList.add('py-1', 'text-gray-500', 'dark:text-gray-400', 'text-center');
+                initialMessage.innerHTML = 'Empezar a buscar permisos. <i class="ri-emotion-happy-fill"></i>';
+                permissionsList.appendChild(initialMessage);
+            } else if (permissions.length === 0) {
+                const noResultsItem = document.createElement('div');
+                noResultsItem.classList.add('py-1', 'text-gray-500', 'dark:text-gray-400', 'text-center');
+                noResultsItem.textContent = 'No se encontraron resultados.';
+                permissionsList.appendChild(noResultsItem);
+            } else {
+                permissions.forEach(permission => {
+                    const permissionItem = document.createElement('div');
+                    permissionItem.classList.add('py-1');
+                    const isChecked = selectedPermissions.includes(permission.id);
+                    permissionItem.innerHTML = `
+                        <label class="block text-center">
+                            <input type="checkbox" name="permissions" value="${permission.id}" ${isChecked ? 'checked' : ''}
+                                class="checkbox-container shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                            ${permission.name}
+                        </label>
+                    `;
+                    permissionsList.appendChild(permissionItem);
+                });
+            }
+        }
+
+        function filterPermissions(query) {
+            if (query === '') {
+                renderPermissions([], query);
+            } else {
+                const filteredPermissions = permissions.filter(permission => {
+                    return permission.name.toLowerCase().includes(query.toLowerCase()) ||
+                        permission.codename.toLowerCase().includes(query.toLowerCase()) ||
+                        permission.content_type__app_label.toLowerCase().includes(query.toLowerCase());
+                });
+                renderPermissions(filteredPermissions, query);
+            }
+        }
+
+        renderPermissions([], '');
+        searchInput.addEventListener('input', function () {
+            filterPermissions(searchInput.value);
+        });
+
+        // Render all permissions on initial load
+        renderPermissions(permissions);
+    });
 </script>
 
 {% endblock content %}
