--- a/templates/components/home.html
+++ b/templates/components/home.html
@@ -77,6 +77,97 @@
     {% endif %}
     <!-- CIERRE DEL MODAD DEL INICIO DEL LOS USUARIOS -->
 
+    <!-- MODAL DE VERSIÓN Y NOVEDADES -->
+    {% if user.is_authenticated %}
+    <button data-modal-target="versionModal" data-modal-toggle="versionModal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+    type="button">
+        Toggle modal
+    </button>
+
+    <!-- Main modal -->
+    <div id="versionModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 flex items-center justify-center">
+        <div class="absolute inset-0 bg-black bg-opacity-50 backdrop-blur-sm"></div>
+        <div class="relative p-4 w-full max-w-2xl">
+            <!-- Modal content -->
+            <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+                <!-- Modal header -->
+                <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
+                        {% trans 'Versión y Novedades' %}
+                    </h3>
+                    <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="versionModal">
+                        <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6" />
+                        </svg>
+                        <span class="sr-only">Close modal</span>
+                    </button>
+                </div>
+                <!-- Modal body -->
+                <div class="p-4 md:p-5 space-y-4">
+                    <p class="text-lg text-gray-700 dark:text-gray-400 mb-4">
+                        {% trans 'Versión actual: 8.5.0' %}
+                    </p>
+                    <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
+                        {% trans 'Novedades de esta versión:' %}
+                    </p>
+                    <ul class="list-disc list-inside text-gray-500 dark:text-gray-400 mb-4">
+                        <li>{% trans 'Optimización del rendimiento y corrección de errores' %}</li>
+                        <li>{% trans 'Rediseño total de la aplicación' %}</li>
+                        <li>{% trans 'Mejoras en la interfaz de usuario' %}</li>
+                        <li>{% trans 'Incorporación de módulos de seguridad y permisos' %}</li>
+                        <li>{% trans 'Registros de Proveedores y Usuarios' %}</li>
+                        <li>{% trans 'Inicio de sesión por Desbloque Facial' %}</li>
+                        <li>{% trans 'Inicio de sesión por QR Empresarial' %}</li>
+                        <li>{% trans 'Implementación total del Modo Oscuro' %}</li>
+                        <li>{% trans 'Centro te notificaciones implementado' %}</li>
+                        <li>{% trans 'Implementación del cambio y recuperación de contraseña' %}</li>
+                        <li>{% trans 'Botón de accesibilidad para el cambio de idioma (English)' %}</li>
+                        <li>{% trans 'Modelo totalmente responsivo' %}</li>
+                        <li>{% trans 'Botón de Whatssap implementado' %}</li>
+                        <li>{% trans 'Centro de envio de correos directos a los administradorres' %}</li>
+                        <li>{% trans 'Centro de temas para la aplicación' %}</li>
+                    </ul>
+                </div>
+                <!-- Modal footer -->
+                <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                    <button data-modal-hide="versionModal" type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                        {% trans 'Cerrar' %}
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const versionModal = document.getElementById('versionModal');
+            const closeVersionModal = document.getElementById('closeVersionModal');
+        
+            // Verificar si el modal ya se ha mostrado
+            if (!localStorage.getItem('versionModalShown')) {
+                // Mostrar el modal de versión después de unos segundos
+                setTimeout(() => {
+                    if (versionModal) {
+                        versionModal.classList.remove('hidden');
+                        localStorage.setItem('versionModalShown', 'true');
+                    }
+                }, 1000); // Espera 5 segundos antes de mostrar el modal
+            }
+        
+            // Cerrar el modal al hacer clic en el botón de cerrar
+            if (closeVersionModal) {
+                closeVersionModal.addEventListener('click', () => {
+                    if (versionModal) {
+                        versionModal.classList.add('hidden');
+                    }
+                });
+            }
+        });
+        </script>
+        
+    {% endif %}
+    <!-- FIN DEL MODAL DE VERSIÓN Y NOVEDADES -->
+
     <!-- SECCIÓN DEL HERO -->
     <section id="hero-section" class="bg-white dark:bg-principal pt-16 hero-background bg-cover bg-center bg-no-repeat">
         <div class="relative flex flex-col-reverse py-16 lg:pt-0 lg:flex-col lg:pb-0">
