--- a/templates/sales/invoices/form.html
+++ b/templates/sales/invoices/form.html
@@ -1,39 +1,37 @@
-{% extends 'components/base.html' %}
-{% block content %}
-{% load static %}
+{% extends 'components/base.html' %} {% block content %} {% load static %}
 <title>{% block title %} {{ title }} {% endblock title %}</title>
 <section class="dark:bg-principal py-20">
     <div class="container mx-auto p-4" data-aos="fade-up" data-aos-delay="300">
-                               <!-- Cinta de navegación -->
-                               <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
-                                <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-                                <li class="inline-flex items-center">
-                                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
-                                    <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                                        <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"/>
-                                    </svg>
-                                    Home
-                                    </a>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/sale/sales_list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Facturas</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="flex items-center">
-                                    <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
-                                    </svg>
-                                    <a href="http://127.0.0.1:8000/sale/sales_create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Facturas</a>
-                                    </div>
-                                </li>
-                                </ol>
-                            </nav>
-                            <br>
+        <!-- Cinta de navegación -->
+        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+            <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
+                <li class="inline-flex items-center">
+                    <a href="/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+                        <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                            <path d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
+                        </svg>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        </svg>
+                        <a href="http://127.0.0.1:8000/sale/sales_list/" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">Consulta de Facturas</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="flex items-center">
+                        <svg class="rtl:rotate-180 block w-3 h-3 mx-1 text-gray-400 " aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4" />
+                        </svg>
+                        <a href="http://127.0.0.1:8000/sale/sales_create/" class="ms-1 text-sm font-medium text-blue-700 hover:text-blue-600 md:ms-2 dark:text-blue-600 dark:hover:text-white">Actualizar Facturas</a>
+                    </div>
+                </li>
+            </ol>
+        </nav>
+        <br>
         <div class="sm:pt-28 lg:pt-4">
             <h1 class="dark:text-white text-4xl text-center mt-6 font-Pacifico">
                 {{ title2 }}
@@ -43,23 +41,19 @@
         <div class="grid gap-8 mx-10 lg:mx-20" data-aos="fade">
             <!-- Formulario de Venta -->
             <form id="frmSale" method="POST" class="space-y-6">
-                {% csrf_token %}
-                {{ form.media }}
+                {% csrf_token %} {{ form.media }}
                 <!-- Principal -->
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 bg-gray-50 dark:bg-secundario rounded-3xl p-6">
                     <div>
-                        <label for="{{ form.customer.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.customer.label }}</label>
+                        <label for="{{ form.customer.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.customer.label }}</label>
                         {{ form.customer }}
                     </div>
                     <div>
-                        <label for="{{ form.issue_date.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.issue_date.label }}</label>
+                        <label for="{{ form.issue_date.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.issue_date.label }}</label>
                         {{ form.issue_date }}
                     </div>
                     <div>
-                        <label for="{{ form.payment_method.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.payment_method.label }}</label>
+                        <label for="{{ form.payment_method.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.payment_method.label }}</label>
                         {{ form.payment_method }}
                     </div>
                 </div>
@@ -69,28 +63,22 @@
                         <div class="md:flex items-center justify-between space-x-4">
                             <div class="mb-8 flex justify-between items-center">
                                 <label for="product" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Producto</label>
-                                <select name="product" id="product"
-                                    class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <select name="product" id="product" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                                     {% for prod in products %}
-                                    <option data-id="{{prod.id}}" data-des="{{prod.description}}" data-price="{{prod.price}}"
-                                        data-stock="{{prod.stock}}" data-iva="{{prod.iva__value}}" value="{{prod.id}}"
-                                        {% if forloop.first %}selected{% endif %}>{{prod.description}}</option>
+                                    <option data-id="{{prod.id}}" data-des="{{prod.description}}" data-price="{{prod.price}}" data-stock="{{prod.stock}}" data-iva="{{prod.iva__value}}" value="{{prod.id}}" {% if forloop.first %}selected{% endif %}>{{prod.description}}</option>
                                     {% endfor %}
                                 </select>
                             </div>
                             <div class="mb-8 flex justify-between items-center">
                                 <label for="price" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Precio</label>
-                                <input name="price" id="price"
-                                    class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <input name="price" id="price" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                             </div>
                             <div class="mb-8 flex justify-between items-center">
                                 <label for="quantify" class="dark:text-blue-300 font-black uppercase text-lg lg:pr-2 px-2">Cantidad</label>
-                                <input name="quantify" id="quantify"
-                                    class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
+                                <input name="quantify" id="quantify" class="shadow-sm bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 pr-12 dark:bg-principal dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500 dark:shadow-sm-light">
                             </div>
                             <div class="mb-8 flex justify-between items-center">
-                                <button id="btnAdd" type="button"
-                                    class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
+                                <button id="btnAdd" type="button" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
                                     <i class="fa-solid fa-box pr-4"></i><i class="fa-solid fa-plus"></i>
                                 </button>
                             </div>
@@ -120,51 +108,41 @@
                     <!-- Derecha -->
                     <div class="mx-6 lg:mx-8 p-4 rounded-3xl dark:bg-secundario bg-gray-50 flex flex-col justify-center items-center">
                         <div class="mb-2 flex justify-between items-center">
-                            <label for="{{ form.subtotal.id_for_label }}"
-                                class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.subtotal.label }}</label>
+                            <label for="{{ form.subtotal.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.subtotal.label }}</label>
                             {{ form.subtotal }}
                         </div>
                         <div class="mb-2 flex justify-between items-center">
-                            <label for="{{ form.discount.id_for_label }}"
-                                class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.discount.label }}</label>
+                            <label for="{{ form.discount.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.discount.label }}</label>
                             {{ form.discount }}
                         </div>
                         <div class="mb-2 flex justify-between items-center">
-                            <label for="{{ form.iva.id_for_label }}"
-                                class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.iva.label }}</label>
+                            <label for="{{ form.iva.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.iva.label }}</label>
                             {{ form.iva }}
                         </div>
                         <div class="mb-2 flex justify-between items-center">
-                            <label for="{{ form.total.id_for_label }}"
-                                class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.total.label }}</label>
+                            <label for="{{ form.total.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg w-32 pr-28">{{ form.total.label }}</label>
                             {{ form.total }}
                         </div>
                     </div>
                 </div>
-                <div
-                    class="flex flex-col md:flex-row justify-center mt-6 p-4 md:px-0 space-x-2 bg-gray-50 dark:bg-secundario rounded-3xl lg:mx-40">
+                <div class="flex flex-col md:flex-row justify-center mt-6 p-4 md:px-0 space-x-2 bg-gray-50 dark:bg-secundario rounded-3xl lg:mx-40">
                     <div>
-                        <label for="{{ form.payment.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.payment.label }}</label>
+                        <label for="{{ form.payment.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.payment.label }}</label>
                         {{ form.payment }}
                     </div>
                     <div>
-                        <label for="{{ form.change.id_for_label }}"
-                            class="dark:text-blue-300 font-black uppercase text-lg">{{ form.change.label }} </label>
+                        <label for="{{ form.change.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.change.label }} </label>
                         {{ form.change }}
                     </div>
-                    <label for="{{ form.state.id_for_label }}"
-                        class="dark:text-blue-300 font-black uppercase text-lg">{{ form.state.label }}</label>
+                    <label for="{{ form.state.id_for_label }}" class="dark:text-blue-300 font-black uppercase text-lg">{{ form.state.label }}</label>
                     {{ form.state }}
                 </div>
                 <div>
                     <div id="btnSave" class="flex flex-col md:flex-row justify-center mt-6 px-4 md:px-0">
-                        <button type="submit"
-                            class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
+                        <button type="submit" class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mb-2 md:mr-2 md:mb-0 flex items-center justify-center w-full md:w-auto">
                             <i class="fa-solid fa-save mr-2"></i>Guardar
                         </button>
-                        <a class="bg-red-700 hover:bg-red-800 text-white py-2 px-4 rounded-full flex items-center justify-center w-full md:w-auto"
-                            href="{% url 'sales:sales_list' %}">
+                        <a class="bg-red-700 hover:bg-red-800 text-white py-2 px-4 rounded-full flex items-center justify-center w-full md:w-auto" href="{% url 'sales:sales_list' %}">
                             <i class="fa-solid fa-xmark mr-2"></i>Cancelar
                         </a>
                     </div>
