--- a/templates/security/group_module_permissions/list.html
+++ b/templates/security/group_module_permissions/list.html
@@ -114,7 +114,7 @@
             <!-- Enlaces adicionales -->
             <div class="flex flex-col md:flex-row justify-center space-x-2 form-group text-center p-4">
                 <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full mr-0 mb-2 md:mb-0 flex items-center justify-center" href="{% url 'security:group_module_permission_create' %}">
-                    <i class="fa-solid fa-plus mr-2"></i> Gestionar GMP
+                    <i class="fa-solid fa-gear mr-2"></i> Gestionar GMP
                 </a>
                 <a class="bg-blue-700 hover:bg-blue-800 text-white py-2 px-4 rounded-full flex items-center justify-center" href="{% url 'modulos' %}">
                     <i class="fa-solid fa-briefcase"></i>
